my-common-deploy/prometheus/grafana/grafana-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: grafana
  namespace: monit
  labels:
    k8s-app: grafana
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
    version: v2.2.1
spec:
  serviceName: "grafana"
  replicas: 1
  podManagementPolicy: "Parallel"
  updateStrategy:
   type: "RollingUpdate"
  selector:
    matchLabels:
      k8s-app: grafana
  template:
    metadata:
      labels:
        k8s-app: grafana
    spec:
      securityContext:
        fsGroup: 104
      containers:
      - envFrom:
        - configMapRef:
            name: grafana
        name: grafana-server
        image: "registry.cn-hangzhou.aliyuncs.com/wanway-base/grafana:6.1.4"
        imagePullPolicy: "IfNotPresent"
        ports:
          - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /login
            port: 3000
          initialDelaySeconds: 30
          timeoutSeconds: 30
        livenessProbe:
          httpGet:
            path: /login
            port: 3000
          initialDelaySeconds: 30
          timeoutSeconds: 30
        resources:
          limits:
            cpu: "800m"
            memory: 1Gi
          requests:
            cpu: "500m"
            memory: 512Mi
        volumeMounts:
          - name: grafana-data
            mountPath: /var/lib/grafana
      terminationGracePeriodSeconds: 300
      imagePullSecrets:
      - name: alihangzhou
  volumeClaimTemplates:
  - metadata:
      name: grafana-data
    spec:
      storageClassName: ceph-storage-class
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: "2Gi"
