my-common-deploy/prometheus/grafana/grafana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    addonmanager.kubernetes.io/mode: Reconcile
    kubernetes.io/cluster-service: "true"
    kubernetes.io/name: Grafana
  name: grafana
  namespace: monit
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    k8s-app: grafana
  sessionAffinity: None
  type: ClusterIP
